Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
/* ... */
.attachments-browse.structured li.attachmentrow .detail .attachments-meta {
  @include typography-subtitle-2;
}

.attachments-browse.structured li.attachmentrow .droparrow {
  background-image: url(../../images/baseline_arrow_drop_down_black_18dp.png);
}

.attachments-browse.thumbs li.attachmentrow .droparrow {
  border: none;
  background-color: transparent;
  background-image: url(../../images/baseline_arrow_drop_down_black_18dp.png);
}

.attachments-browse.structured li.attachmentrow.active .droparrow {
  background-image: url(../../images/baseline_arrow_drop_up_black_18dp.png);
  background-position: 0;
  top: 8px;
}

.attachments-browse.thumbs li.attachmentrow.active {
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.attachments-browse.structured li.attachmentrow,
.attachments-browse.structured li.folder {
  position: relative;
  border-top: 1px solid transparent;
  border-bottom: 1px solid rgba(224, 224, 224, 1);
  padding: 8px 20px 8px 12px;
  background-position: 5px 5px;
  background-repeat: no-repeat;
  background-image: none;
  .link-div a:before {
    content: "\e24d";
    font-family: "Material Icons";
    font-size: 20px;
    color: $menuItemIconColor;
    vertical-align: middle;
    padding-right: 6px;
  }
}

.attachments-browse.thumbs li.attachmentrow .detail {
  background-color: white;
  border: none;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.attachments-browse li.attachmentrow .attachments-meta {
  @include typography-subtitle-2;
  background-color: white;
}

.extras a {
  .icon-fullscreen {
    &:before {
      content: "\e5d0";
      font-family: "Material Icons";
      font-size: 24px;
      color: $menuItemIconColor;
      vertical-align: middle;
      font-style: normal;
    }
  }
  .icon-move {
    &:before {
      content: "\e8fe";
      font-family: "Material Icons";
      font-size: 24px;
      color: $menuItemIconColor;
      vertical-align: middle;
      font-style: normal;
    }
  }
}
a.modal-control.modal-save {
  right: 394px;
}

.universalresourcedialog .modal-content {
  height: 400px;
}

.universalresourcedialog .modal-content-inner {
  min-height: 384px;
}

.universalresourcedialog .pick-resource-type td {
  cursor: pointer;
}

.universalresourcedialog .pick-resource-type td.selected {
  background: #80d2ee !important;
}

.universalresourcedialog .pick-resource-type td h4 {
  font-size: 12px;
  line-height: 1.4;
}

.universalresourcedialog .file-header {
  height: 140px;
}

.universalresourcedialog .file-header img.file-thumbnail {
  float: left;
  width: 88px;
}

.universalresourcedialog .file-header .file-info {
  float: left;
  line-height: 1.3;
  margin-left: 20px;
}

.universalresourcedialog .input.text label,
.universalresourcedialog .input.textarea label {
  padding: 5px 0px;
}

.universalresourcedialog .input.text input[type="text"],
.universalresourcedialog .input.text textarea {
  width: 450px;
  margin: 5px 0px;
}

.universalresources {
  word-break: break-all;
}

.universalresources td.actions {
  width: 110px;
}

div.universaliframe {
  /*
	This is what the fancybox ends up being
	for multiple resource handler selection
	*/
  height: 476px;
  overflow: hidden;
}

div.universaliframe iframe {
  width: 100%;
  height: 100%;
}

.attachment-details table.zebra.detail {
  border: none;
  margin: 0px 0px 15px;
}

.attachment-details .detail .label {
  font-weight: bold;
}

.attachment-details .thumbnail {
  text-align: center;
  margin-bottom: 10px;
}

.attachment-details .viewlink {
  text-align: center;
  font-weight: bold;
}

.attachment-details .thumbnail img {
  height: 66px;
}

.attachment-content {
  min-height: 340px;
  padding: 20px 25px;
}

.attachment-details {
  width: 34%;
}

.attachment-content .settingContainer > .settingRow:first-child {
  padding-top: 3px;
}

.attachment-content .settingContainer {
  width: 432px;
}

.attachment-content .settingRow .settingLabel {
  width: 105px;
}

.attachment-content .settingRow .settingField {
  width: 315px;
}

.subsiduaryboxes > .settingRow > .settingField {
  padding-left: 25px;
  padding-top: 0;
  width: 290px;
}

.attachment-content .settingField input[type="text"],
.attachment-content .settingField input[type="password"],
.attachment-content .settingField textarea,
.attachment-content .settingField select {
  /* IE needs a fixed width for the select it would seem */
  width: 300px;
}

.attachment-details hr {
  margin: 10px 0 10px;
}

.preview-tag {
  margin-left: 0.5em;
}

p.warning {
  background-color: #f90;
  border: 1px solid red;
  margin-bottom: 20px;
  padding: 10px;
  text-align: center;
}

.warningimg {
  margin: 5px 20px 5px 55px;
}

img.warningimg {
  vertical-align: middle;
}

.universalresources .progress-bar {
  width: 200px;
  height: 14px;
  border: 1px solid #aaa;
  margin: 0 10px 0 0;

  -moz-border-radius: 3px;
  -o-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
  float: right;
}

.universalresources .progressbarInner {
  height: 14px;
  background: #80d2ee !important;
}

/*****************************************************************************
 Selection Summary
*****************************************************************************/
.action-button.execute-action {
  background-image: url("../../images/baseline_exit_to_app_white_18dp.png");
  background-repeat: no-repeat;
  background-color: $primaryColor;
  text-align: center;
  background-size: 26px 26px;
  background-position: left 3px top 4px;
  &:hover {
    background-color: transparentize($primaryColor, 0.1);
  }
  &:active {
    background-color: transparentize($primaryColor, 0.3);
  }
}

/*****************************************************************************
 Selection Dialog
*****************************************************************************/
#wrapper {
  min-width: 784px;
}

#body-wrap2 {
  padding-top: 0;
}

#body-wrap3,
#body-inner {
  width: auto;
}
/* ... */

